--- a/README.org
+++ b/README.org
@@ -1,5 +1,25 @@
 * circle-fit
 Fit circle to set of points. Find radius of curvature. Find planitude and alatude with respect to another point.
+** Test
+#+BEGIN_SRC sh :results verbatim
+python circle-fit.py
+#+END_SRC
+
+#+RESULTS:
+#+begin_example
+      fun: 9.093083936160763e-14
+ hess_inv: array([[  1.00000000e+00,   1.65985682e-05],
+       [  1.65985682e-05,   1.25826685e+00]])
+      jac: array([  2.60532386e-07,  -3.61247888e-07])
+  message: 'Optimization terminated successfully.'
+     nfev: 20
+      nit: 4
+     njev: 5
+   status: 0
+  success: True
+        x: array([ 2.50000006,  0.49999954])
+#+end_example
+
 ** History
 + Initial motivation [2018-02-22 Thu]
   + This is based on earlier programs such as ~find-xy-shell.py~ and ~fit-circle-shell.py~
