Try adding :exports both to get the RESULTS to be seen

--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 * circle-fit
 Fit circle to set of points. Find radius of curvature. Find planitude and alatude with respect to another point.
 ** Test
-#+BEGIN_SRC sh :results verbatim
+#+BEGIN_SRC sh :results verbatim :exports both
 python circle-fit.py
 #+END_SRC
 
