Iterate for circle fit, including only points with |theta_c| < 30

--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 Fit circle to set of points. Find radius of curvature. Find planitude and alatude with respect to another point.
 ** Test
 #+BEGIN_SRC sh :results verbatim :exports both
-python circle-fit.py
+python circle-fit.py inner
 #+END_SRC
 
 #+RESULTS:
@@ -20,18 +20,49 @@ python circle-fit.py
   success: True
         x: array([ 2.50000006,  0.49999954])
 ### Image Test
-      fun: 9.093083936160763e-14
- hess_inv: array([[  1.00000000e+00,   1.65985682e-05],
-       [  1.65985682e-05,   1.25826685e+00]])
-      jac: array([  2.60532386e-07,  -3.61247888e-07])
-  message: 'Optimization terminated successfully.'
-     nfev: 20
-      nit: 4
-     njev: 5
-   status: 0
-  success: True
-        x: array([ 2.50000006,  0.49999954])
-Figure file: plot-w000-400-ridge.pdf
+Optimization terminated successfully.
+Star position: (315.1670298243821, 783.6334060361919)
+Center position: [ 343.80297433  729.22269297]
+Radius of curvature: 75.4959571496
+Axis unit vector: [-0.46573022  0.88492675]
+Apex distance: 14.0098366536
+Optimization terminated successfully.
+Star position: (315.1670298243821, 783.6334060361919)
+Center position: [ 333.744174   754.9897307]
+Radius of curvature: 50.2664146965
+Axis unit vector: [-0.5441388   0.83899521]
+Apex distance: 16.1259632911
+Optimization terminated successfully.
+Star position: (315.1670298243821, 783.6334060361919)
+Center position: [ 348.10535149  736.70840611]
+Radius of curvature: 72.705315255
+Axis unit vector: [-0.57452505  0.818487  ]
+Apex distance: 15.3739220055
+Optimization terminated successfully.
+Star position: (315.1670298243821, 783.6334060361919)
+Center position: [ 333.744174   754.9897307]
+Radius of curvature: 50.2664146965
+Axis unit vector: [-0.5441388   0.83899521]
+Apex distance: 16.1259632911
+Optimization terminated successfully.
+Star position: (315.1670298243821, 783.6334060361919)
+Center position: [ 348.10535149  736.70840611]
+Radius of curvature: 72.705315255
+Axis unit vector: [-0.57452505  0.818487  ]
+Apex distance: 15.3739220055
+Optimization terminated successfully.
+Star position: (315.1670298243821, 783.6334060361919)
+Center position: [ 333.744174   754.9897307]
+Radius of curvature: 50.2664146965
+Axis unit vector: [-0.5441388   0.83899521]
+Apex distance: 16.1259632911
+Optimization terminated successfully.
+Star position: (315.1670298243821, 783.6334060361919)
+Center position: [ 348.10535149  736.70840611]
+Radius of curvature: 72.705315255
+Axis unit vector: [-0.57452505  0.818487  ]
+Apex distance: 15.3739220055
+Figure file: plot-w000-400-inner.pdf
 #+end_example
 
 #+BEGIN_SRC sh
