--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 Fit circle to set of points. Find radius of curvature. Find planitude and alatude with respect to another point.
 ** Test
 #+BEGIN_SRC sh :results verbatim :exports both
-python circle-fit.py outer
+python circle-fit.py inner
 #+END_SRC
 
 #+RESULTS:
@@ -21,42 +21,30 @@ python circle-fit.py outer
         x: array([ 2.50000006,  0.49999954])
 ### Image Test
 Optimization terminated successfully.
-  Star position: (315.1670298243821, 783.6334060361919)
-  Center position: [ 355.99407571  710.69691433]
-  Radius of curvature: 110.699804533
-  Axis unit vector: [-0.48844498  0.87259469]
-  Apex distance: 27.1140431985
+  Apex distance: 15.7098958138
+  Radius of curvature: 78.5036793024
+  Perpendicular radius (+/-): [ 41.46313869  41.94730266]
 Optimization terminated successfully.
-  Star position: (315.1670298243821, 783.6334060361919)
-  Center position: [ 339.5291488   739.03588882]
-  Radius of curvature: 79.8702436867
-  Axis unit vector: [-0.47940105  0.87759594]
-  Apex distance: 29.0524182459
+  Apex distance: 18.7913654544
+  Radius of curvature: 50.7816094917
+  Perpendicular radius (+/-): [ 47.31936246  39.67468654]
 Optimization terminated successfully.
-  Star position: (315.1670298243821, 783.6334060361919)
-  Center position: [ 335.30235349  747.89749771]
-  Radius of curvature: 70.4042079803
-  Axis unit vector: [-0.49088847  0.87122242]
-  Apex distance: 29.3860851189
+  Apex distance: 18.7432282735
+  Radius of curvature: 50.4538404738
+  Perpendicular radius (+/-): [ 52.38147381  37.88079261]
 Optimization terminated successfully.
-  Star position: (315.1670298243821, 783.6334060361919)
-  Center position: [ 331.99998568  752.85851559]
-  Radius of curvature: 64.646138874
-  Axis unit vector: [-0.47987681  0.87733588]
-  Apex distance: 29.5684781066
+  Apex distance: 18.7432282735
+  Radius of curvature: 50.4538404738
+  Perpendicular radius (+/-): [ 52.38147381  37.88079261]
 Optimization terminated successfully.
-  Star position: (315.1670298243821, 783.6334060361919)
-  Center position: [ 331.99998568  752.85851559]
-  Radius of curvature: 64.646138874
-  Axis unit vector: [-0.47987681  0.87733588]
-  Apex distance: 29.5684781066
+  Apex distance: 18.7432282735
+  Radius of curvature: 50.4538404738
+  Perpendicular radius (+/-): [ 52.38147381  37.88079261]
 Optimization terminated successfully.
-  Star position: (315.1670298243821, 783.6334060361919)
-  Center position: [ 331.99998568  752.85851559]
-  Radius of curvature: 64.646138874
-  Axis unit vector: [-0.47987681  0.87733588]
-  Apex distance: 29.5684781066
-Figure file: plot-w000-400-outer.pdf
+  Apex distance: 18.7432282735
+  Radius of curvature: 50.4538404738
+  Perpendicular radius (+/-): [ 52.38147381  37.88079261]
+Figure file: plot-w000-400-inner.pdf
 #+end_example
 
 #+BEGIN_SRC sh
